--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>AngularTryout</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>
+    Hot Weather Widget  Responsive Widget Template | Home :: w3layouts
+  </title>
+ 
+  <!-- Custom Theme files -->
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="keywords" content="Hot Weather Widget Responsive, Login form web template, Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--google fonts-->
+  <link href='//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="element"></app-root>
+  <div class="copy-right">
+			<p>© 2015 Hot Weather Widget. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
+  </div>
 </body>
 </html>
